<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Hai, Username!"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/carousel"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/carousel"
        android:layout_width="312dp"
        android:layout_height="157dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/carousel"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/greetings" />

    <ImageButton
        android:id="@+id/panggil_kurir_button"
        android:layout_width="145dp"
        android:layout_height="135dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/panggil_kurir"
        app:layout_constraintStart_toStartOf="@+id/carousel"
        app:layout_constraintTop_toBottomOf="@+id/carousel" />

    <ImageButton
        android:id="@+id/pindai_sampah_button"
        android:layout_width="145dp"
        android:layout_height="135dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/pindai_sampah"
        app:layout_constraintEnd_toEndOf="@+id/carousel"
        app:layout_constraintTop_toBottomOf="@+id/carousel" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panggil_kurir"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/panggil_kurir_button"
        app:layout_constraintStart_toStartOf="@+id/panggil_kurir_button"
        app:layout_constraintTop_toBottomOf="@+id/panggil_kurir_button"
        tools:ignore="SmallSp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pindai_sampah"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pindai_sampah_button"
        app:layout_constraintStart_toStartOf="@+id/pindai_sampah_button"
        app:layout_constraintTop_toBottomOf="@+id/pindai_sampah_button"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>